# trattoria

./: .gitignore  DEV.md  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: g2.py  g3.py  g3_sync.py  lifetime.py  postselection.py  timetrace.py  zerofinder.py
trattoria/: __init__.py  core.py  postselection.py
