[tool.poetry]
name = "trattoria"
version = "0.3.5"
description = "The fastest streaming algorithms for your TTTR data"
authors = ["Guillem Ballesteros <dev+pypi@maxwellrules.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/GCBallesteros/trattoria"
repository = "https://github.com/GCBallesteros/trattoria"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.20"
scipy = ">=1.8"
trattoria-core = "0.4.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
